--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:textSize="20dp"
         android:textColor="#000000"
         android:textStyle="bold"
-        android:text="족구 지각자 명단"
+        android:text="지각자 명단"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
 </android.support.v7.widget.Toolbar>
@@ -72,7 +72,11 @@
         android:id="@+id/user_list_recyclerView"
         android:background="#dadada"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        android:layout_height="300dp"></android.support.v7.widget.RecyclerView>
+    <TextView
+        android:id="@+id/resultLog_tv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
 </LinearLayout>
