--- a/app/src/main/res/layout/input_fragment.xml
+++ b/app/src/main/res/layout/input_fragment.xml
@@ -53,6 +53,26 @@
         <TextView
             android:layout_weight="0.5"
             android:gravity="center"
+            android:text="지각비"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
+        <EditText
+            android:layout_weight="1"
+            android:gravity="center"
+            android:id="@+id/input_charge_et"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_weight="1"
+        android:layout_margin="10dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_weight="0.5"
+            android:gravity="center"
             android:text="이유"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
