--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -52,5 +52,12 @@
             android:layout_height="wrap_content"
             android:hint="이유" />
 
+        <ImageView
+            android:id="@+id/delete_item"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@android:drawable/ic_notification_clear_all"
+            />
+
     </LinearLayout>
 </android.support.v7.widget.CardView>
